# KitchenCopilot

./: .gitignore  CLAUDE.md  Home.py  README.md  db_utils.py  docker-compose.yml  kitchencopilot.db  prepare.py  pyproject.toml  requirements.txt  runtime.txt  weather_utils.py
.claude/: launch.json
.github/workflows/: tests.yml
.streamlit/: config.toml  secrets.toml
components/: components.py  home.py  sidebar.py
data/models/: feature_columns.pkl  model_metadata.json  random_forest_model.pkl
data/processed/: test_data.csv
data/raw/: holidays_2024_2025.csv  holidays_2025_2027.csv
models/: random_forest_model.pkl
notebooks/: extract_data.ipynb  meal_prediction_linear_regression.ipynb  meal_prediction_random_forrest.ipynb  synthesize_data.ipynb
pages/: 1_Prepare your Forecast.py  1_Prepare.py  2_Meal Demand Prediction.py  2_Prediction.py  3_Actuals vs. Predicted.py  4_Import Actuals.py  4_Import.py
scripts/: delete_actuals.py  init_ci_db.py  init_db.py  seed_actuals.py  seed_data.py  seed_data_actual_sales.py  seed_data_predictions.py  seed_holidays.py  train_model.py  transform_actuals.py
scripts/old/: seed_data.py
src/: app.py  home.py  prepare.py
styles/css/: main.css
tests/: conftest.py  test_converters.py
tests/apptest/: test_page_import_actuals.py
tests/db/: test_db_utils_mocked.py  (+2 more)
utils/: __init__.py  converters.py  data_preparation_utils.py  day_themes.py  db_conn.py  db_utils.py  export_pdf.py  home_utils.py  import_utils.py  llm_insights.py  paths.py  prediction_utils.py  translations.json  translations_utils.py  weather_utils.py
(+16 files in other folders)
